--- a/gb/23/1/24/n13914400.md
+++ b/gb/23/1/24/n13914400.md
@@ -48,39 +48,39 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951507.md#1">河南多地突降大雪  此前最高气温达30℃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951496.md#1">中国非洲猪瘟再起 北方产区感染面或达50%</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13951109.md#1">中共人大代表曝内情：新冠疫苗可引发心肌炎</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13950209.md#1">【晚间新闻】抗原脱销 核酸亭摇身变甲流亭</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964226.md#1">大陆恶性事件频发?重庆男子持刀无差别砍人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963378.md#1">中国5董座4高管一个月内接连病亡 均不到60岁</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962711.md#1">【晚间新闻】河北邯郸驾车撞人案 伤亡或惨重</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/25/n10666303.md#1" target="_blank">观雨堂主：大陆高校的“秘密信息员”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/9/27/n3693107.md#1" target="_blank">一诺：中共假“关爱”之名对青少年的洗脑迫害</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/1/n10448635.md#1" target="_blank">林辉：上书毛反对土改 农学家慧眼识中共</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/5/n11633708.md#1" target="_blank">华东师范大学法轮功学员的20年</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/11/n13947696.md#1">【未解之谜】邮票上的预言</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/11/n13947935.md#1">才能出众护国大将军 因一句话遭现世报而绝嗣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13923682.md#1">【古道人生】看相的说他恐怕冻饿而死 他却中了进士</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13950328.md#1">【未解之谜】消失的《小人国》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/9/n13946484.md#1">睦妯娌和兄弟 她们留下千古佳话</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951934.md#1">【中国禁闻】中国银行系统危险？ 央行称要拆金融炸弹</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13951097.md#1">【百年真相】30岁自尽 钢琴家顾圣婴悲歌</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951648.md#1">【十字路口】中共自曝无力对台出兵？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13950970.md#1">【快讯】郭文贵涉嫌欺诈在纽约被捕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13950663.md#1">中共高层换届“有人主动退”？专家解读</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13950292.md#1">大陆女演员被困北京酒店厕所 逃脱后报警无果</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13951063.md#1">被指撞脸杨紫琼 杨绣惠晒同框合照 网友嗨翻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13950227.md#1">疫情之后又确诊甲流 于和伟自嘲：挺会赶时髦</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13951154.md#1">白冰冰曝费玉清退休生活：来无影去无踪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13950322.md#1">蔡卓妍晒与5大咖合照 张学友一举动笑翻网友</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951954.md#1">离婚一年半晒与汪涵合照 欧弟暴瘦引热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13950256.md#1">大豆抗癌又降血压 正确食用很重要</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947423.md#1">传统药物破坏身体系统 8种自然疗法缓解头痛</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13943994.md#1">想延年益寿？远离垃圾食物的诱惑是最好方法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13950702.md#1">什么是“慢游”？有何好处？ 专家细说分明</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951529.md#1">如何强化记忆力？ 世界纪录保持人教你几招</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963438.md#1">【时事人物】从任性少年到ChatGPT新乌托邦教主</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964335.md#1">【全球新闻】马英九称两岸都是中华民国 遭中共封杀</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963293.md#1">【拍案惊奇】蔡奇要官员向习公布财产防外逃？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963385.md#1">【财商天下】银行危机暂解 美联储还会加息？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962292.md#1">海南变香港？专家：党比法大 难造自由港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962933.md#1">分析：养儿防老被中共破坏 老人何去何从</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963429.md#1">9岁时曾遭绑架 张艾嘉儿子首次吐露心声</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962676.md#1">《镜之孤城》影评：奇幻经历 成走出霸凌阴霾契机</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962591.md#1">常服安眠药痴呆风险增8成  专家荐“神奇助眠剂”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962594.md#1">这几种食物加辣酱 味道超乎想像</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/1/24/n13914400.htm">上海大学前教师：李洪志大师新文章深刻透彻</a></p><hr>
